[tool.poetry]
name = "new-deepimfam"
version = "0.1.0"
description = ""
authors = ["uipkleh <h23ms416@hirosaki-u.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.1"
pyjson = "^1.4.1"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
