[tool.poetry]
name = "new-deepimfam"
version = "0.1.0"
description = ""
authors = ["uipkleh <h23ms416@hirosaki-u.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.1"
pyjson = "^1.4.1"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
pandas = "^2.2.2"
tqdm = "^4.66.2"
opencv-python = "^4.9.0.80"
scikit-learn = "^1.4.2"
tensorflow = "^2.16.1"
keras-preprocessing = "^1.1.2"
seaborn = "^0.13.2"
imblearn = "^0.0"
xgboost = "^2.0.3"
catboost = "^1.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
